--- a/Javascript Projects/Countdown Timer/index.html
+++ b/Javascript Projects/Countdown Timer/index.html
@@ -10,7 +10,7 @@
         <title>Countdown Timer</title>
         <meta name="description" content="Countdown Timer">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="script.js">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -23,7 +23,29 @@
             </header>
 
             <video src="./videos/spring.mp4" muted loop autoplay></video>
+
+            <div class="overlay"></div>
+                
+            <div class="text">
+                <h2>H2</h2>
+                <h3>H3</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus ratione sapiente esse necessitatibus provident labore nihil dolorum amet maiores iste.</p>
+                <a href="#">See this</a>
+            </div>
+
+            <ul class="social">
+                <li><img src="facebook.png" alt=""></li>
+                <li><img src="linkedin.png" alt=""></li>
+                <li><img src="github.png" alt=""></li>
+            </ul>
         </section>
+
+        <div class="menu">
+            <ul>
+                <li><a href="#">Countdown to New Years</a></li>
+                <li><a href="#">Custom Countdown</a></li>
+            </ul>
+        </div>
 
         <script src="script.js" async defer></script>
     </body>
