temp vid for styling

--- a/Javascript Projects/Countdown Timer/index.html
+++ b/Javascript Projects/Countdown Timer/index.html
@@ -22,7 +22,7 @@
                 <div class="toggle"></div>
             </header>
 
-            <video src="./videos/spring.mp4" muted loop autoplay></video>
+            <video src="./videos/snow.mp4" muted loop autoplay></video>
 
             <div class="overlay"></div>
                 
