--- a/Javascript Projects/Countdown Timer/index.html
+++ b/Javascript Projects/Countdown Timer/index.html
@@ -18,31 +18,30 @@
         <![endif]-->
         <section class="showcase">
             <header>
-                <h2 class="logo">Countdown Timer</h2>
+                <h2 class="logo">Custom Countdown Timer</h2>
                 <div class="toggle"></div>
             </header>
 
-            <video src="./videos/snow.mp4" muted loop autoplay></video>
+            <video src="./videos/winter.mp4" muted loop autoplay></video>
 
             <div class="overlay"></div>
                 
             <div class="text">
-                <h2>H2</h2>
-                <h3>H3</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus ratione sapiente esse necessitatibus provident labore nihil dolorum amet maiores iste.</p>
-                <a href="#">See this</a>
+                <h2>(Winter)</h2>
+                <h3>Change the weather at the top right</h3>
+                <p>This is a mini-project with some switches/toggles for different backgrounds and some social media functionality.</p>
+                <a href="#">Click me to choose a date to countdown</a>
             </div>
 
             <ul class="social">
-                <li><img src="facebook.png" alt=""></li>
-                <li><img src="linkedin.png" alt=""></li>
-                <li><img src="github.png" alt=""></li>
+                <li><a href="https://www.linkedin.com/in/vitalii-moudrak-55266597/" target="_blank"><img src="./images/social_icons/linkedin.png" alt="linkedin"></li></a>
+                <li><a href="https://github.com/jurpvit" target="_blank"><img src="./images/social_icons/github.png" alt="github"></li></a>
             </ul>
         </section>
 
         <div class="menu">
             <ul>
-                <li><a href="#">Countdown to New Years</a></li>
+                <li><a href="#">New Years Countdown</a></li>
                 <li><a href="#">Custom Countdown</a></li>
             </ul>
         </div>
