--- a/Javascript Projects/Countdown Timer/index.html
+++ b/Javascript Projects/Countdown Timer/index.html
@@ -30,7 +30,7 @@
                 <h2>(Winter)</h2>
                 <h3>Change the weather at the top right</h3>
                 <p>This is a mini-project with some switches/toggles for different backgrounds and some social media functionality.</p>
-                <a href="#">Click me to choose a date to countdown</a>
+                <a href="#">Custom date countdown</a>
             </div>
 
             <ul class="social">
@@ -42,7 +42,6 @@
         <div class="menu">
             <ul>
                 <li><a href="#">New Years Countdown</a></li>
-                <li><a href="#">Custom Countdown</a></li>
             </ul>
         </div>
 
